Updated main.ipynb with latest changes

--- a/Scripts/main.ipynb
+++ b/Scripts/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -37,6 +37,8 @@
       " Step 4: Removing Redundant Features...\n",
       " Dropping 6 redundant features: ['o', 'p', 'q', 'r', 'u', 'y']\n",
       " After Removing Redundant Features: <class 'pandas.core.frame.DataFrame'>\n",
+      "\n",
+      " Cleaned dataset saved successfully at: C:\\Users\\User\\Downloads\\DataCleaning_Assignment1\\Data\\cleaned_data.csv\n",
       "\n",
       " Running Model...\n",
       "\n",
@@ -79,6 +81,11 @@
     "print(\"\\n Testing Step 4: Remove Redundant Features\")\n",
     "clean_data = dp.remove_redundant_features(clean_data)\n",
     "print(\" After Removing Redundant Features:\", type(clean_data))  # <-- Check if it's None\n",
+    "\n",
+    "#Save the cleaned dataset\n",
+    "cleaned_data_path = 'C:\\\\Users\\\\User\\\\Downloads\\\\DataCleaning_Assignment1\\\\Data\\\\cleaned_data.csv'\n",
+    "clean_data.to_csv(cleaned_data_path, index=False)\n",
+    "print(f\"\\n Cleaned dataset saved successfully at: {cleaned_data_path}\")\n",
     "\n",
     "#  Final Check Before Model\n",
     "if clean_data is None:\n",
